welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
droite();droite()

if(!estSurBiscuit) {
	avance()
	
	if (estSurBiscuit && !porteBiscuit) {
	prendBiscuit()
	}
	while (porteBiscuit && !estSurBiscuit) {
	recule()
	}
	if (estSurBiscuit && porteBiscuit) {
	avance()
	poseBiscuit()
	avance()
	}
	if (estSurBiscuit && !porteBiscuit) {
	prendBiscuit()
	}
	if (estFaceMur)  {
	droite();avance();gauche();avance();
}

} else {
